--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,14 @@
 
 /* #endregion partner */
 
+/* #region benefits */
+
+.benefits{
+    margin: 2rem 0;
+}
+
+
+/* #endregion benefits */
 
 
 
@@ -174,6 +182,7 @@
     }
 
     .col_md_3{
+
         width: calc(100% / 12 *3);
     
     }
