--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,6 +170,9 @@
     
     }
     
+    .row_lg{
+        flex-wrap: nowrap;
+    }
 }
 
 @media screen and (min-width: 1160px){
@@ -183,7 +186,7 @@
     }
 
     .row_lg{
-        gap: 6rem;
+    flex-wrap: nowrap;
     }
 
     .col_md_6{
