[add] call to action section structure

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,7 +140,14 @@
 
 /* #endregion benefits */
 
+/* #region call_to_action */
 
+.call_bg{
+    background-color: var(--light-purple);
+}
+
+
+/* #endregion call_to_action */
 
 /* #endregion main */
 
