--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@
     --light-white: #ffffff;
     --light-blue: #b5ddff;
     --light-purple:#9792e4;
+    --dark-black: #000;
 }
 
 .container{
@@ -154,6 +155,9 @@
 
 /* #region footer */
 
+.footer_bg{
+    background-color: var(--dark-black);
+}
 
 /* #endregion footer */
 
